--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,20 +14,19 @@
     "start": "yarn nodemon dist/api.js"
   },
   "dependencies": {
-    "apollo-server-express": "^2.3.1",
-    "express": "^4.16.4",
-    "graphql": "^14.0.2",
-    "luxon": "^1.5.0",
-    "reflect-metadata": "0.1.12",
-    "lodash": "^4.17.11",
+    "apollo-server-express": "^2.9.15",
+    "express": "^4.17.1",
+    "graphql": "^14.5.8",
+    "luxon": "^1.21.3",
+    "reflect-metadata": "^0.1.13",
+    "lodash": "^4.17.15",
     "faker": "^4.1.0"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.119",
-    "@types/faker": "^4.1.4",
+    "@types/lodash": "^4.14.149",
+    "@types/faker": "^4.1.8",
     "@types/express": "^4.16.0",
-    "@types/graphql": "^14.0.3",
-    "@types/luxon": "^1.4.1",
-    "nodemon": "^1.18.5"
+    "@types/luxon": "^1.21.0",
+    "nodemon": "^2.0.2"
   }
 }
