--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "techradar-api",
-  "displayName": "Techradar API",
+  "name": "itapi-server",
   "version": "0.0.1",
   "private": true,
   "license": "UNLICENSED",
